--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 
 <head>
     <meta charset=utf-8/>
+    <title>hw-05</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
+    <div>
+        <h1 class=center>hw-05: Interactive Graph with D3</h1>
 
+        <div class="flex">
+            <div id="left-column">
+                
+            </div>
+            <div id="right-column">
+
+            </div>
+        </div>
+    </div>
 
 </body>
 
