--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset=utf-8/>
     <title>hw-05</title>
     <link rel="stylesheet" href="style.css">
+    <script src="js/d3.v6.1.1/d3.min.js"></script>
 </head>
 
 
@@ -14,11 +15,51 @@
 
         <div class="flex">
             <div id="left-column">
-                
+                <div id="vis1"></div>
+                <div id="vis2"></div>
             </div>
             <div id="right-column">
+                <p id="selected-point">
+                    Most Recent Point: NaN
+                </p>
+                <div>
+                    <form id="pointForm">
+                        <label for="x-val">X value</label>
+                        <input type="number" id="x-val" min="1" max="9" value="5" step="1">
+                        <br>
+                        <label for="y-val">Y value</label>
+                        <input type="number" id="y-val" min="1" max="9" value="5" step="1">
+                        <br>
 
+                    </form>
+                    <button type="submit" id="subButton">
+                        Submit
+                    </button>
+
+                </div>
+                <div>
+                    <form>
+
+                    </form>
+
+                </div>
             </div>
+        </div>
+        <script src="js/main.js"></script>
+        <div>
+            <h2 class="center">Acknowledgments</h2>
+            <ul>
+                <li><a href="https://stackoverflow.com/questions/22584060/d3js-how-to-toggle-css-class-after-clicking-on-anelement">Toggling css class</a></li>
+            </ul>
+            <ul>
+                <li><a href="https://www.geeksforgeeks.org/d3-js-d3-continuous-invert-function/">Inverting a scaled variable</a></li>
+            </ul>
+            <ul>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/round/">Round to nearest integer</a></li>
+            </ul>
+            <ul>
+                <li><a href="https://www.tutorialsteacher.com/d3js/create-bar-chart-using-d3js">Creating a Bar Chart in D3</a></li>
+            </ul>
         </div>
     </div>
 
